--- a/themes/butterfly/layout/includes/hometop.pug
+++ b/themes/butterfly/layout/includes/hometop.pug
@@ -65,9 +65,7 @@ if is_home()
                                 | 山河远阔，人间烟火
                                 br
                                 | 无一是你，无一不是你
-                        //- 使用 picture 元素提供多种图片格式
-                        picture.todayCard-cover
-                            source(type="image/avif" srcset="/img/todayCardCover.avif")
+                        .todayCard-cover(style='background:url(/img/todayCardCover.avif) no-repeat center/cover', onerror='this.onerror=null,this.src="/img/404.png"')
                         .banner-button-group
                             a.banner-button(onclick='window.event.cancelBubble=!0,bywind.hideTodayCard()')
                                 i.hnfont.icon-add-circle-fill
