--- a/themes/butterfly/layout/includes/layout.pug
+++ b/themes/butterfly/layout/includes/layout.pug
@@ -20,10 +20,9 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
       #body-wrap(class=pageType)
         include ./header/index.pug
         if is_home()
-          if theme.hometop.enable || (theme.brevity.home_mini && theme.brevity.enable)
+          if theme.hometop.enable
             #home_top
-              if theme.brevity.home_mini && theme.brevity.enable
-                include ./bbtimelist.pug
+              include ./bbtimelist.pug
               if theme.hometop.enable
                 include ./hometop.pug
 
