--- a/themes/butterfly/layout/includes/hometop.pug
+++ b/themes/butterfly/layout/includes/hometop.pug
@@ -1,8 +1,24 @@
-.recent-top-post-group#recent-top-post-group
-    .recent-post-top#recent-post-top
-        #home_top_iconsCard
-            #home_top_iconsCard_content
-                include ./banner.pug
-        if theme.hometop.recommendList.enable
-            .topGroup
-                include ./topGroup.pug
+#home_top
+  .home_top_group
+    #homeTopGroup.homeTopGroup
+      .category_group
+          .category_item
+            a.category_button(href="/archives/",style="background:linear-gradient(to right,#00868Bdb,#3fc1c9db)")
+              span.category_button_text 归档
+              i.fas.fa-laptop-code
+          .category_item
+            a.category_button(href="/archives/2022/",style="background:linear-gradient(to right, #0A5ABEdb, #2fcbffdb)")
+              span.category_button_text 2022
+              i.fas.fa-lightbulb
+      .top_post_group
+        //- 这下面是原来固定的写法
+        //- if site.data.slider
+        //-   each i in site.data.slider
+        //-     .top_post_item
+        //-       .post_cover
+        //-         a(href=url_for(i.link) title=i.title)
+        //-           img.post_bg.entered.loaded(src=url_for(i.cover))
+        //-           .post_cover_info
+        //-             p.post_cover_text= i.description
+        //-       .post_info(onclick=`"window.open(`+url_for(i.link)+`,"_self")"`)
+        //-         a.article-title(href=url_for(i.link) title=i.title)= i.title
