--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/page/about.pug
@@ -287,23 +287,23 @@
             -webkit-transition: all .4s!important;
             -moz-transition: all .4s!important;
             -o-transition: all .4s!important;
-            -ms-transition: all .4s!important;
-            transition: all .4s!important;
+            -ms-transition: all .4s;
+            transition: all .4s;
           }
+        .reward-main
+          ul.reward-all
+            li.reward-item
+              a.about-reward(arget="_blank" data-pjax-state="")
+                img.entered.loaded.post-qr-code-img(alt="微信" data-lazy-src="https://cdn.qcqx.cn/blog/pay/weixin.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/weixin.webp")
+                .img-alt.is-center 微信
+              .post-qr-code-desc 微信
+            li.reward-item
+              a.about-reward(target="_blank")
+                img.entered.loaded.post-qr-code-img(alt="支付宝" data-lazy-src="https://cdn.qcqx.cn/blog/pay/alipay.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/alipay.webp")
+                .img-alt.is-center 支付宝
+              .post-qr-code-desc 支付宝
         button.reward-button.tip-button
           span.tip-button__text 投 喂
-          .reward-main
-            ul.reward-all
-              li.reward-item
-                a.about-reward(arget="_blank" data-pjax-state="")
-                  img.entered.loaded.post-qr-code-img(alt="微信" data-lazy-src="https://cdn.qcqx.cn/blog/pay/weixin.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/weixin.webp")
-                  .img-alt.is-center 微信
-                .post-qr-code-desc 微信
-              li.reward-item
-                a.about-reward(target="_blank")
-                  img.entered.loaded.post-qr-code-img(alt="支付宝" data-lazy-src="https://cdn.qcqx.cn/blog/pay/alipay.webp" data-ll-status="loaded" loading="lazy" src="https://cdn.qcqx.cn/blog/pay/alipay.webp")
-                  .img-alt.is-center 支付宝
-                .post-qr-code-desc 支付宝
 
 script(src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/gsap/3.9.1/gsap.min.js")
 script.
